--- a/public/styles.css
+++ b/public/styles.css
@@ -19,8 +19,7 @@ body {
   top:0;
   z-index: -5;
   height: 60vh;
-  background: url("https://images.unsplash.com/photo-1576867757603-05b134ebc379?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D") no-repeat center center/cover;
-  display: flex;
+  background: url("/bg.jpeg") no-repeat center center/cover;  display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -85,10 +84,6 @@ header {
   border-radius: 8px;
   overflow: hidden;
   transition: transform 0.3s ease;
-}
-
-.restaurant-menu:hover {
-  transform: translateY(-5px);
 }
 
 .restaurant-menu h2 {
