--- a/public/styles.css
+++ b/public/styles.css
@@ -98,11 +98,25 @@ body {
   margin: 0 auto;
 }
 
+
+
 /* Header */
 header {
   background-color:rgb(255, 255, 255);
   padding: 1rem;
   text-align: center;
+  position: relative;
+}
+
+.text-scramble {
+color:rgb(255, 255, 255);
+font-size: 2rem;
+top: 0;
+position: absolute;
+padding: 0.2rem 0.6rem;
+left: 50%;
+background-color: #A2D2FF;
+transform: translate(-50%, -50%);
 }
 
 .stats p {
